# ChangeLog for dev-lisp/cl-mcclim
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-mcclim/ChangeLog,v 1.15 2007/07/11 14:38:17 hkbst Exp $

*cl-mcclim-0.9.2-r1 (11 Jul 2007)

  11 Jul 2007; Marijn Schouten <hkBst@gentoo.org>
  +files/50cl-mcclim-gentoo.el, -files/50mcclim-gentoo.el,
  -files/0.9.1-mcclim.asd-cmucl.patch, -cl-mcclim-0.9.1.ebuild,
  -cl-mcclim-0.9.2.ebuild, +cl-mcclim-0.9.2-r1.ebuild:
  fix bug 184619

  03 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> cl-mcclim-0.9.1.ebuild:
  Use mirror://debian/ where applicable, or use mirror://gentoo/ if the file
  has been removed from debian's mirrors.

  29 Nov 2006; Matthew Kennedy <mkennedy@gentoo.org> cl-mcclim-0.9.2.ebuild:
  addwrite for tetex font business; Resolves Bug #134673.

  02 Sep 2006; Matthew Kennedy <mkennedy@gentoo.org> cl-mcclim-0.9.2.ebuild:
  Add missing dev-lisp/cl-spatial-trees dependency; Resolves Bug #140714.

*cl-mcclim-0.9.2 (26 May 2006)

  26 May 2006; Matthew Kennedy <mkennedy@gentoo.org>
  +files/0.9.2-mcclim.asd-cmucl.patch, +cl-mcclim-0.9.2.ebuild:
  New upstream version.

  24 May 2005; <mkennedy@gentoo.org> cl-mcclim-0.9.1.ebuild:
  Keywording ~sparc

  16 Apr 2005; Matthew Kennedy <mkennedy@gentoo.org> cl-mcclim-0.9.1.ebuild:
  Keywording; Removed old ebuilds

  11 Apr 2005; Matthew Kennedy <mkennedy@gentoo.org> cl-mcclim-0.9.1.ebuild:
  Keywording for ~amd64

*cl-mcclim-0.9.1 (11 Apr 2005)

  11 Apr 2005; Matthew Kennedy <mkennedy@gentoo.org>
  +files/0.9.1-mcclim.asd-cmucl.patch,
  -files/0.9.20040603/50mcclim-gentoo.el, -files/0.9.20041227-gentoo.patch,
  -files/0.9/system.lisp-gentoo.patch, -cl-mcclim-0.9.ebuild,
  +cl-mcclim-0.9.1.ebuild, -cl-mcclim-0.9.20040603.ebuild,
  -cl-mcclim-0.9.20041227.ebuild, -cl-mcclim-0.9.20050202.ebuild:
  New upstream; Removed older ebuilds.

*cl-mcclim-0.9.20050202 (04 Feb 2005)

  04 Feb 2005; Matthew Kennedy <mkennedy@gentoo.org>