@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-spatial-trees/cl-spatial-trees-0.2.ebuild,v 1.1 2006/09/02 07:46:41 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-spatial-trees/cl-spatial-trees-0.2.ebuild,v 1.2 2007/07/14 13:13:28 opfer Exp $
 
 inherit common-lisp
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.cliki.net/spatial-trees"
 SRC_URI="http://ftp.linux.org.uk/pub/lisp/cclan/spatial-trees-${PV}.tar.gz"
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~sparc ~x86"
+KEYWORDS="~amd64 ~ppc ~sparc x86"
 IUSE=""
 
 DEPEND="dev-lisp/common-lisp-controller
