@@ -1,6 +1,10 @@
 # ChangeLog for dev-lisp/cl-spatial-trees
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-spatial-trees/ChangeLog,v 1.3 2007/02/22 01:32:26 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-spatial-trees/ChangeLog,v 1.4 2007/07/14 13:13:28 opfer Exp $
+
+  14 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
+  cl-spatial-trees-0.2.ebuild:
+  stable x86, bug 185075
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
