@@ -1,6 +1,10 @@
 # ChangeLog for dev-lisp/cl-mcclim
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-mcclim/ChangeLog,v 1.15 2007/07/11 14:38:17 hkbst Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-mcclim/ChangeLog,v 1.16 2007/07/14 13:14:18 opfer Exp $
+
+  14 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
+  cl-mcclim-0.9.2-r1.ebuild:
+  stable x86, bug 185075
 
 *cl-mcclim-0.9.2-r1 (11 Jul 2007)
 
